- fix the viewheight for the gradient column - hide it on smaller viewports - remove the rounded corners from it

--- a/public/styles/mainStyle.css
+++ b/public/styles/mainStyle.css
@@ -107,14 +107,6 @@ img#tutor-avatar, .img-thumbnail {
 	background-size: cover;
 }
 
-@media (max-width: 767px) {
-	h2 {
-		margin-bottom: 25px;
-		padding-top: 25px;
-		font-size: 24px;
-	}
-}
-
 .intro {
 	font-size: 16px;
 	max-width: 500px;
@@ -277,9 +269,31 @@ img#tutor-avatar, .img-thumbnail {
 }
 
 @media (min-width: 769px) {
-	.gradient-custom-2 {
+	/** ???? rounded corners 
+		.gradient-custom-2 {
 		border-top-right-radius: 0.3rem;
 		border-bottom-right-radius: 0.3rem;
+	} */
+	.gradient-custom-2 {
+		min-height:100vh;
+	}
+}
+@media (max-width: 767px) {
+	h2 {
+		margin-bottom: 25px;
+		padding-top: 25px;
+		font-size: 24px;
+	}
+	.mx-md-4 {
+        margin-right: 1.5rem !important;
+        margin-left: 1.5rem !important;
+    }
+	.gradient-custom-2 {
+		overflow: hidden;
+		height: 0;
+	}
+	.navbar>.container-fluid {
+		display: inline-block;
 	}
 }
 
